Add 2017 winners. Update dates in blank winners for future.

--- a/BlankWinnersForFutureUse.htm
+++ b/BlankWinnersForFutureUse.htm
@@ -4,14 +4,14 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title>2016 German Fest Stein Challenge Organized By Beer Barons Of Milwaukee &gt; 2013 German Fest Stein Challenge</title>
+<title>2017 German Fest Stein Challenge Organized By Beer Barons Of Milwaukee &gt; 2017 German Fest Stein Challenge</title>
 <link href="css/claussenii.css" rel="stylesheet" type="text/css">
 
 <a name="top"></a>
 <div id="container">
 <div id="navigation">
 	<div id="navigation-inner"><ul id="nav">
-  
+
 </div>
 </div>
 
@@ -21,7 +21,7 @@
 
 	<a name="bottom"></a>
 <div id="footer">
-	<div id="footer-inner"><a href="http://www.brewcompetition.com/" target="_blank">BCOE&amp;M</a> ©2009-2013 by <a href="http://www.zkdigital.com/" target="_blank">zkdigital.com</a>.
+	<div id="footer-inner"><a href="http://www.brewcompetition.com/" target="_blank">BCOE&amp;M</a> ï¿½2009-2013 by <a href="http://www.zkdigital.com/" target="_blank">zkdigital.com</a>.
 </div>
 
 
