--- a/2018Winners.htm
+++ b/2018Winners.htm
@@ -4,9 +4,10 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title>2017 German Fest Stein Challenge Organized By Beer Barons Of Milwaukee &gt; 2017 German Fest Stein Challenge</title>
+<title>2018 German Fest Stein Challenge Organized By Beer Barons Of Milwaukee &gt; 2018 German Fest Stein Challenge</title>
 <link href="css/claussenii.css" rel="stylesheet" type="text/css">
-
+</head>
+<body>
 <a name="top"></a>
 <div id="container">
 <div id="navigation">
